--- a/KinectGesturesServer/KinectGesturesServer.csproj
+++ b/KinectGesturesServer/KinectGesturesServer.csproj
@@ -81,6 +81,7 @@
     <Compile Include="HandTracker.cs" />
     <Compile Include="IntColorConverter.cs" />
     <Compile Include="NuiSensor.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="TrackingDataControl.xaml.cs">
       <DependentUpon>TrackingDataControl.xaml</DependentUpon>
     </Compile>
