--- a/KinectGesturesServer/KinectGesturesServer.csproj
+++ b/KinectGesturesServer/KinectGesturesServer.csproj
@@ -82,9 +82,9 @@
     </ApplicationDefinition>
     <Compile Include="HandTracker.cs" />
     <Compile Include="ImageProcessorLib.cs" />
-    <Compile Include="ImageProcessors\MorphologicalProcessor.cs" />
     <Compile Include="IntColorConverter.cs" />
     <Compile Include="MultiTouchTracker.cs" />
+    <Compile Include="MultiTouchTrackerOmni.cs" />
     <Compile Include="NuiSensor.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="TrackingDataControl.xaml.cs">
