derivative finger detector

--- a/KinectGesturesServer/Properties/Settings.settings
+++ b/KinectGesturesServer/Properties/Settings.settings
@@ -2,13 +2,16 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="KinectGesturesServer.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="NoiseThreshold" Type="System.Double" Scope="User">
+    <Setting Name="Threshold1" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="FingerThreshold" Type="System.Double" Scope="User">
+    <Setting Name="Threshold2" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="BlindThreshold" Type="System.Double" Scope="User">
+    <Setting Name="Threshold3" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Threshold4" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
