--- a/KinectGesturesServer/app.config
+++ b/KinectGesturesServer/app.config
@@ -7,13 +7,16 @@
     </configSections>
     <userSettings>
         <KinectGesturesServer.Properties.Settings>
-            <setting name="NoiseThreshold" serializeAs="String">
+            <setting name="Threshold1" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="FingerThreshold" serializeAs="String">
+            <setting name="Threshold2" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="BlindThreshold" serializeAs="String">
+            <setting name="Threshold3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Threshold4" serializeAs="String">
                 <value>0</value>
             </setting>
         </KinectGesturesServer.Properties.Settings>
